added reading data

--- a/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.html
@@ -2,23 +2,25 @@
     <br><br>
      <div class="mx-auto" style="width: 98%;">
          <table class="table table-hover">
-         <thead>
-             <tr>
-               <th scope="col">id</th>
-               <th scope="col">movie name</th>
-               <th scope="col">amount</th>
-             </tr>
-           </thead>
        
-         <tbody>
-             <tr *ngFor="let reservation of reservations" style="padding-left:15px; padding-top: 15px;">
-                 <td> {{reservation.id}} </td>
-                 <td> {{reservation.buyerUserName}} </td>
-                 <td> {{reservation.totalPrice}} </td>
-                <td *ngFor="let ticket of reservation.tickets" style="padding-left:15px; padding-top: 15px;">
-                    <td> ticket.id </td>
-             </tr>       
-         </tbody>
+        <tbody *ngFor="let reservation of reservations">
+            <tr> Id: {{reservation.id}} </tr>
+            <tr> TotalPrice: {{reservation.totalPrice}} </tr>
+            
+            <ul *ngFor="let ticket of reservation.tickets">
+                <li> {{ticket.id}} </li> 
+                <li> {{ticket.projectionId}} </li> 
+                <li> {{ticket.projectionDate}} </li> 
+                <li> {{ticket.projectionTerm}} </li> 
+                <li> {{ticket.movieId}} </li> 
+                <li> {{ticket.movieTitle}} </li> 
+                <li> {{ticket.theaterHallId}} </li> 
+                <li> {{ticket.theaterHallName}} </li>      
+                <li> {{ticket.price}} </li>    
+                <li> {{ticket.numberOfTickets} </li>   
+            </ul>
+        </tbody>
+
 
      </table>
      </div>
