--- a/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.html
@@ -1,28 +1,35 @@
 <div class="form-group">
     <br><br>
      <div class="mx-auto" style="width: 98%;">
-         <table class="table table-hover">
-       
-        <div *ngFor="let reservation of reservations">
-            <h3> Reservation ID: {{reservation.id}} </h3>
-            <h3> TotalPrice: {{reservation.totalPrice}} </h3>
-            
-            <h2> Tickets : </h2>
-
-            <div *ngFor="let ticket of reservation.tickets">
-                <h6> Ticket ID : {{ticket.id}} </h6> 
-                <!--<h6> {{ticket.projectionId}} </h6> -->
-                <h6> Title : {{ticket.movieTitle}} </h6> 
-                <h6> Date : {{ticket.projectionDate}} </h6> 
-                <h6> Term : {{ticket.projectionTerm}} </h6> 
-                <h6> Movie ID : {{ticket.movieId}} </h6> 
-                <!-- <h6> {{ticket.theaterHalh6d}} </h6> --> 
-                <h6> Hall name : {{ticket.theaterHallName}} </h6>      
-                <h6> Price : {{ticket.price}} </h6>    
-                <h6> Number of tickets : {{ticket.numberOfTickets}} </h6>   
-            </div>
-        </div>
-     </table>
+         <table class="table" style="width:95%">
+            <tbody>
+                <tr *ngFor="let reservation of reservations; let i = index">
+                    <td>
+                        <h3> Reservation ID: {{reservation.id}} </h3>
+                        <h3> TotalPrice: {{reservation.totalPrice}} </h3>
+                        <div *ngIf="show[i]">
+                            <h2> Tickets : </h2>
+                            <div *ngFor="let ticket of reservation.tickets">
+                                <h4> Title : {{ticket.movieTitle}} </h4> 
+                                <h6> Ticket ID : {{ticket.id}} </h6> 
+                                <!--<h6> {{ticket.projectionId}} </h6> -->
+                                <h6> Date : {{ticket.projectionDate}} </h6> 
+                                <h6> Term : {{ticket.projectionTerm}} </h6> 
+                                <h6> Movie ID : {{ticket.movieId}} </h6> 
+                                <!-- <h6> {{ticket.theaterHalh6d}} </h6> --> 
+                                <h6> Hall name : {{ticket.theaterHallName}} </h6>      
+                                <h6> Price : {{ticket.price}} </h6>    
+                                <h6> Number of tickets : {{ticket.numberOfTickets}} </h6>   
+                            </div>
+                        </div>
+                    </td>
+                    
+                    <td><div class="modal-footer">
+                        <button class="btn btn-outline-dark" (click)="show[i] = !show[i]">{{show[i] ? 'See less' : 'See more'}}</button>
+                    </div></td>
+                </tr>
+            </tbody>
+        </table>
      </div>
  </div>
 
