--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-delete-form/coupon-delete-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-delete-form/coupon-delete-form.component.html
@@ -1,4 +1,4 @@
-<button class="button" 
+<button class="btn btn-primary" 
         (click)="open(mymodal)">
         Delete coupon
 </button>
@@ -7,7 +7,7 @@
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Delete coupon</h4>            
 
-        <button type="button" class="close" aria-label="Close" (click)="close()">
+        <button class="btn btn-primary" class="close" aria-label="Close" (click)="close()">
             <span aria-hidden="true">×</span>
         </button>
     </div>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="modal-footer">
-        <button class="btn btn-outline-dark" (click)="onCouponDelete()">Delete coupon</button>
+        <button class="btn btn-primary" (click)="onCouponDelete()">Delete coupon</button>
     </div>
 
 </ng-template>
