--- a/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/header/header.component.html
@@ -1,7 +1,8 @@
 <div style="background-color: rgb(50, 159, 209)">
     <nav class="navbar navbar-expand navbar-dark" style="background-color: rgb(50, 159, 209)">
         <div class="mx-auto" style="color:rgb(152, 207, 232);">
-            <h3><b><i><a (click)="mainPage()">Movie Tickets Booking</a></i></b></h3>
+            <h3 *ngIf="!isLoginOrRegisterPage()"><b><i><a (click)="mainPage()">Movie Tickets Booking</a></i></b></h3>
+            <h3 *ngIf="isLoginOrRegisterPage()" style="margin-left: 0px"><b><i><a (click)="mainPage()">Movie Tickets Booking</a></i></b></h3>
         </div>
             
         <div class="form-group wide" *ngIf="isMainPage()" style="margin-right:5px">
