fix [Angular] Information about movies only visible when there is a movie with entered id

--- a/MovieBooking/MovieBookingSPA/src/app/movies/movies.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/movies.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="movieDetails !== null">
 
     <h2 style="margin-top: 20px; margin-bottom: 20px;">{{ movieDetails.title }}</h2>
 
