--- a/MovieBooking/MovieBookingSPA/src/app/movies/feature-search/search/search.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/feature-search/search/search.component.css
@@ -64,13 +64,18 @@ img:hover {
     cursor: pointer;
   }
 
-  a:link { text-decoration: none; }
 
+a:link { text-decoration: none; }
 
 a:visited { text-decoration: none; }
 
-
 a:hover { text-decoration: none; }
 
-
 a:active { text-decoration: none; }
+
+li:hover {
+  cursor: pointer;
+}
+
+
+
