--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-form/coupon-form.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-form/coupon-form.component.css
@@ -1,3 +1,19 @@
-.form {
-    background-color : lightblue
+span.error {
+    font-size: 11px;
+    color: red;
+}
+.flex {
+    display: flex;
+    flex-direction: row;
+}
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+.pos{
+    position: absolute; 
+    top:0; 
+    right:0;
+    margin-top: 20px; 
+    margin-right: 20px;
 }
