--- a/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.css
@@ -1,3 +1,7 @@
-.container {
-    background-color : lightblue
+.pos{
+    position: absolute; 
+    top:0; 
+    right:0;
+    margin-top: 20px; 
+    margin-right: 20px;
 }
