--- a/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.html
@@ -1,14 +1,16 @@
 <div>
     <nav class="navbar navbar-expand">
-        <div class="navbar-brand" style="padding-left: 50px; padding-top: 15px; padding-right: 200px;">
+        <div class="navbar-brand">
             <h3 style="color: grey; margin-top:10px; margin-left: 10px;"><b><i>Coupons</i></b></h3>
         </div>
-            <div class="pos">
+        
+           <div class="pos" >
                 <app-coupon-form style="padding-right: 25px;"></app-coupon-form>
                 <app-coupon-update-form style="padding-right: 25px;"></app-coupon-update-form>
                 <app-coupon-delete-form style="padding-right: 25px;"></app-coupon-delete-form>
             </div>
     </nav>
+    <hr>
 </div>
 
 <app-coupon-list></app-coupon-list>
