--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-update-form/coupon-update-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-update-form/coupon-update-form.component.html
@@ -30,11 +30,14 @@
             </div>
 
             <div class="form-group">
-                <label class="form-label">amount</label>
+                <label class="form-label">amount(%)</label>
                 <input type="number" formControlName="amount" class="form-control">
 
             <span *ngIf="showFormErrors && amount?.errors?.['min']" class="error">
                 Minimum amount is 1
+            </span>
+            <span *ngIf="showFormErrors && amount?.errors?.['max']" class="error">
+                Maximum amount is 100
             </span>
             <span *ngIf="showFormErrors && amount?.errors?.['required']" class="error">
                 Amount is required
