--- a/MovieBooking/MovieBookingSPA/src/app/main-page/sidebar/sidebar.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
         <div class="sidebar-field" (click)="profile()">Profile</div>
         <div *ngIf="isAdmin()" class="sidebar-field" (click)="theaterHall()">Theater Hall</div>
         <div *ngIf="isAdmin()" class="sidebar-field" (click)="projection()">Projection</div>
-        <div *ngIf="isAdmin()" class="sidebar-field" (click)="discount()">Disocunt</div>
+        <div *ngIf="isAdmin()" class="sidebar-field" (click)="discount()">Discount</div>
         <div class="sidebar-field" (click)="reservations()">Reservations</div>
         <div class="sidebar-field" (click)="reservationHistory()">Reservation history</div>
         <div class="sidebar-field" (click)="logout()">Sign Out</div>
