--- a/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.html
@@ -2,8 +2,8 @@
     <br><br>
      <div style="width: 98%; ">
          <div style="padding: 10px;">
-                <table *ngFor="let reservation of reservations.reverse(); let i = index" style="padding:5px; width: 100%;">
-                    <td style="padding: 5px;">
+                <table *ngFor="let reservation of reservations.reverse(); let i = index" style="width: 100%;">
+                    <td style="padding: 10px;">
                         <h3> Reservation ID: {{reservation.id}} </h3>
                         <h3> TotalPrice: {{reservation.totalPrice}} </h3>
 
@@ -11,8 +11,8 @@
                             <h2> Tickets : </h2>
 
                             <div class="wrapper" style="gap:5px">
-                                <div class="box" *ngFor="let ticket of reservation.tickets" style="border: 1px; box-sizing: border-box;">
-                                    <table style="border-top: 5px solid gray;">
+                                <div class="box" *ngFor="let ticket of reservation.tickets" style="border: 1px gray; box-sizing: border-box;">
+                                    <table style="border-top: 8px solid gray;">
                                         <tr>
                                             <td> Title : </td>
                                             <td> {{ticket.movieTitle}} </td>
