--- a/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.css
@@ -2,9 +2,15 @@
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
   grid-auto-rows: auto;
-  padding: 10px;
+  grid-auto-columns: minmax(250px, 1fr);
 }
 
 table{
   border:1px solid #000;
+}
+
+table td {
+  width: 20px;
+  border-bottom: 1px solid #000;
+  padding: 5px;
 }
