Added hall name to projection preview on movies page

--- a/MovieBooking/MovieBookingSPA/src/app/movies/movies.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/movies.component.html
@@ -76,8 +76,9 @@
         <div class="flex-column">
             <h6>{{projection.projectionDate}} {{projection.projectionTerm}}</h6>
             <h6>Price: {{projection.price}}</h6>
+            <h6>Hall: {{projection.theaterHallName}}</h6>
             <h6>Seats left: {{projection.numberOfSeats - projection.numberOfReservedSeats}}</h6>
-        
+
             <button 
             class="btn" 
             style="background-color: darkblue; color: aliceblue; margin-right: 10px; margin-top: 10px;"
