--- a/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/administration/feature-administration/reservations-list/reservations-list.component.html
@@ -2,7 +2,7 @@
     <br><br>
      <div style="width: 98%; ">
          <div style="padding: 10px;">
-                <table *ngFor="let reservation of reservations.reverse(); let i = index" style="padding:5px; width: 100%;">
+                <table *ngFor="let reservation of reservations.reverse(); let i = index" style="padding:5px; width: 100%; margin-top: -1px;">
                     <td style="padding: 10px;">
                         <h3> Reservation ID: {{reservation.id}} </h3>
                         <h3> TotalPrice: {{reservation.totalPrice}} </h3>
@@ -10,7 +10,7 @@
                         <div *ngIf="show[i]" style="margin-top: 15px; margin-left: 30px;">
                             <h2> Tickets : </h2>
 
-                            <div class="wrapper" style="gap:5px">
+                            <div class="wrapper" style="gap:20px">
                                 <div class="box" *ngFor="let ticket of reservation.tickets" style="border: 1px gray">
                                     <table style="border-top: 8px solid gray; width:100%; height: 100%">
                                         <tr>
