--- a/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.html
@@ -5,12 +5,11 @@
         </div>
         
            <div class="pos" >
-                <app-coupon-form style="padding-right: 25px;"></app-coupon-form>
-                <app-coupon-update-form style="padding-right: 25px;"></app-coupon-update-form>
-                <app-coupon-delete-form style="padding-right: 25px;"></app-coupon-delete-form>
+                <app-coupon-form></app-coupon-form>
+                <app-coupon-update-form style="margin-left: 10px;"></app-coupon-update-form>
+                <app-coupon-delete-form style="margin-left: 10px;"></app-coupon-delete-form>
             </div>
     </nav>
-    <hr>
 </div>
 
 <app-coupon-list></app-coupon-list>
