--- a/MovieBooking/MovieBookingSPA/src/app/reservations/reservations-list/reservations-list.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/reservations/reservations-list/reservations-list.component.html
@@ -88,6 +88,6 @@
     </tbody>
 </table>
 
-<div class="container">
-    <h6><b>TOTAL PRICE: {{totalPrice}}</b></h6>
+<div class="container" style="margin-top: 30px">
+        <h6><b>TOTAL PRICE: {{totalPrice}}</b></h6>
 </div>
