--- a/MovieBooking/MovieBookingSPA/src/app/reservations/reservations.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/reservations/reservations.component.html
@@ -8,7 +8,7 @@
             <!--Delete button--> 
             <button 
             class="btn" 
-            style="background-color: rgba(161, 0, 0, 0.862); color: aliceblue"
+            style="background-color: rgba(161, 0, 0, 0.862); color: aliceblue; margin-right: 10px;"
             (click)="open(deleteModal)">
                 Delete All
             </button>
@@ -27,7 +27,7 @@
                     <button class="btn btn-outline-dark" (click)="close()">No</button>
                 </div>
             </ng-template>
-
+            
             <!--Chekout button--> 
             <button class="btn btn-primary" 
             style="margin-left: 10px;" 
