--- a/MovieBooking/MovieBookingSPA/src/app/main-page/sidebar/sidebar.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/main-page/sidebar/sidebar.component.html
@@ -2,9 +2,10 @@
     <div class="sidebar-content">
         <div class="sidebar-field" (click)="mainPage()">Home</div>
         <div class="sidebar-field" (click)="profile()">Profile</div>
-        <div *ngIf="isAdmin()" class="sidebar-field" (click)="theaterHall()">Theater Hall</div>
-        <div *ngIf="isAdmin()" class="sidebar-field" (click)="projection()">Projection</div>
-        <div *ngIf="isAdmin()" class="sidebar-field" (click)="discount()">Discount</div>
+        <div *ngIf="isAdmin()" class="sidebar-field" (click)="addMovie()">Add movie</div>
+        <div *ngIf="isAdmin()" class="sidebar-field" (click)="theaterHall()">Theater Halls</div>
+        <div *ngIf="isAdmin()" class="sidebar-field" (click)="projection()">Projections</div>
+        <div *ngIf="isAdmin()" class="sidebar-field" (click)="discount()">Discounts</div>
         <div class="sidebar-field" (click)="reservations()">Reservations</div>
         <div class="sidebar-field" (click)="reservationHistory()">Reservation history</div>
         <div class="sidebar-field" (click)="logout()">Sign Out</div>
