feat Implemented two different errors when creating movies
One error is when movie is already in the database, and in that case return code is 409 Conflict. Otherwise, if there's a problem with API, return code is 400 Bad Request.

--- a/MovieBooking/MovieBookingSPA/src/app/movies/feature-add-movie/add-movie/add-movie.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/feature-add-movie/add-movie/add-movie.component.html
@@ -5,7 +5,7 @@
         </div>
     </nav>
     <label style="color: rgb(50, 159, 209);">Enter movie id from IMDb:</label>
-    <input class="form-control" (keyup.enter)="addMovie()" [(ngModel)]="movieId" style="width: 50%" id="input" type="text">
+    <input class="form-control" (keyup.enter)="addMovie()" [(ngModel)]="movieId" style="width: 50%" id="input" type="text" autocomplete="off">
     <button type="button" (click)="addMovie()" class="btn btn-primary" style="margin-top: 10px">Submit</button>
 </div>
 
