Minor changes of components look

--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-delete-form/coupon-delete-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-delete-form/coupon-delete-form.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="modal-footer">
-        <button class="btn btn-primary" (click)="onCouponDelete()">Delete coupon</button>
+        <button class="btn btn-outline-dark" (click)="onCouponDelete()">Delete coupon</button>
     </div>
 
 </ng-template>
