--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-update-form/coupon-update-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-update-form/coupon-update-form.component.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="modal-footer">
-        <button class="btn btn-primary" (click)="onCouponUpdate()">Update coupon</button>
+        <button class="btn btn-outline-dark" (click)="onCouponUpdate()">Update coupon</button>
     </div>
 
 </ng-template>
