Unsubscribed from all observables in reservations, projection and theater-hall. Updated ReservationsListComponent

--- a/MovieBooking/MovieBookingSPA/src/app/movies/movies.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/movies.component.html
@@ -107,7 +107,7 @@
                     <div>
                         <p>Total price: {{projection.price * numberOfTickets.value}}</p>
                     </div>
-                    <span *ngIf="!processing and showServerErrors" class="error">
+                    <span *ngIf="!processing && showServerErrors" class="error">
                         {{errMsg}}
                     </span>
                     <span *ngIf="processing" class="error" class="msg">
